--- a/components/light_control/CMakeLists.txt
+++ b/components/light_control/CMakeLists.txt
@@ -1,3 +1,3 @@
 idf_component_register(SRCS "light.c"
                     INCLUDE_DIRS .
-                    REQUIRES console esp_driver_gpio esp_driver_ledc pthread)
+                    REQUIRES console esp_driver_gpio esp_driver_ledc pthread nvs_flash)
